code25_all/scala/7418945.txt
def pattern(prefix: String) = (prefix + "_(\\w+)").r

val x = something match {
  case pattern("a")(key) => "AAAA" + key
  case pattern("b")(key) => "BBBB" + key
}

scala> def pattern(prefix: String) = (prefix + "_(\\w+)").r
pattern: (prefix: String)scala.util.matching.Regex

scala> def f(s:String) = s match {
     | case pattern("a")(x) => s+x+"AAAAA"
<console>:2: error: '=>' expected but '(' found.
       case pattern("a")(x) => s+x+"AAAAA"
                        ^

